--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "react-top-loading-bar": "^2.3.1",
@@ -38,6 +39,7 @@
     ]
   },
   "devDependencies": {
+    "tailwind-scrollbar": "^2.1.0",
     "tailwindcss": "^3.2.7"
   }
 }
